--- a/public/todo.html
+++ b/public/todo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Todos</title>
+    <title>My Alchemy homework to do list</title>
     <link rel="stylesheet" href="common/reset.css">
     <link rel="stylesheet" href="common/main.css">
     <link rel="stylesheet" href="common/Header.css">
